--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.57.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "sass": "sass --watch ./src/sass:./src",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
